# bot-weather-for-git-actions

./: .gitignore  app.py  pyproject.toml  requirements.txt
.github/workflows/: run_daily.yml
