[tool.poetry]
name = "git-actions-weather-bot"
version = "0.1.0"
description = ""
authors = ["denis sergeevich pekshev <pekshev.ds@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openmeteo-requests = "^1.3.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
numpy = "^2.1.0"
pandas = "^2.2.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
types-requests = "^2.32.0.20240712"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
